language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_in_pattern_without_argument.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport wobble\n\npub fn main() {\n  case wobble.Wibble {\n    wobble.Wibble -> 1\n    wobble.Wubble(1) -> 2\n  }\n  let wob = wobble.Wibble\n  todo\n}\n"
---
----- BEFORE ACTION

import wobble

pub fn main() {
  case wobble.Wibble {
       ▔▔▔▔▔▔▔▔↑      
    wobble.Wibble -> 1
    wobble.Wubble(1) -> 2
  }
  let wob = wobble.Wibble
  todo
}


----- AFTER ACTION

import wobble.{Wibble}

pub fn main() {
  case Wibble {
    Wibble -> 1
    wobble.Wubble(1) -> 2
  }
  let wob = Wibble
  todo
}
