language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_multiple_line_bad_format_without_trailing_comma.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option.{type Option,\n    None\n\n}\n\npub fn main() {\n  option.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{type Option,
    None

}

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{type Option,
    None, Some

}

pub fn main() {
  Some(1)
}
