language-server/src/tests/snapshots/gleam_language_server__tests__action__qualified_to_unqualified_import_nested_type_inner.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport option\nimport wobble\n\npub fn main(x) -> option.Option(wobble.Wibble) {\n    todo\n}\n"
---
----- BEFORE ACTION

import option
import wobble

pub fn main(x) -> option.Option(wobble.Wibble) {
                                ▔▔▔▔▔▔▔↑        
    todo
}


----- AFTER ACTION

import option
import wobble.{type Wibble}

pub fn main(x) -> option.Option(Wibble) {
    todo
}
